# GameChoice

./: .gitignore  README.md  database_functions.py  gamechoice.py  main.glade  main.glade~  meson.build  test_database_functions.py
GameChoice/: org.example.App.json
GameChoice/data/: org.example.App.desktop.in
GameChoice/po/: meson.build
GameChoice/src/: gamechoice.in  meson.build  window.ui
data/: org.example.App.gschema.xml
db/: create_database.txt
src/: database_functions.py  main.py  test_database_functions.py  window.py  window.ui  window.ui~
